# TJPR_diario

./: .coverage  .gitignore  docker-compose.yml  notepad .gitignore  pyproject.toml
tests/: test_mongo.py  teste_api.py
tjpr_api_diario/: Dockerfile  database.py  main.py  requirements.txt  routes.py
tjpr_diario/: docker-compose.yml  main.py  requirements.txt  routes.py  scraper.py
tjpr_scraper_diario/: Dockerfile  _init_.py  requirements.txt  scraper.py
